ristrutturata l'esecuzione automatica degli script

--- a/courses/app/views/authIndex.scala.html
+++ b/courses/app/views/authIndex.scala.html
@@ -1,11 +1,9 @@
 @(user: UserCredentials, form: Form[Authentication.Login])
 
 @index(form) {Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout</a>} {
-<script language="JavaScript">
-function havefun() {
-    //do nothing
-}
-</script>
+
+<!-- no script -->
+
 }
 
  
