--- a/courses/app/views/forbidden.scala.html
+++ b/courses/app/views/forbidden.scala.html
@@ -1,1 +1,23 @@
+@()
+
+@main {
+<!-- barrasinistra -->
+
+
+
+} {
+<!-- partecentrale -->
+
 Forbidden!
+
+} {
+<!-- authstate -->
+
+
+
+} {
+<!-- script -->
+
+
+
+}
