--- a/courses/app/views/main.scala.html
+++ b/courses/app/views/main.scala.html
@@ -5,6 +5,16 @@
  <head> 
  
  @script
+
+<script language="JavaScript">
+
+    function havefun() {
+        if (typeof autofun == 'function') { 
+            autofun(); 
+        }
+    }
+
+</script>
  
   <link href="@routes.Assets.at("stylesheets/bootstrap.css")" rel="stylesheet">
       <style type="text/css">
