rifatto render view

--- a/courses/app/views/courseform.scala.html
+++ b/courses/app/views/courseform.scala.html
@@ -3,7 +3,7 @@
 @import helper._
 @import helper.twitterBootstrap._
     
-@helper.form(action = routes.SecuredApplication.newCourse) {
+@helper.form(action = routes.SecuredApplication.newExternCourse) {
        <fieldset>
             <legend>Account informations</legend>
             @inputText(
