--- a/courses/app/views/students_studyplans.scala.html
+++ b/courses/app/views/students_studyplans.scala.html
@@ -1,4 +1,4 @@
-@(user: UserCredentials, courses_enrolled: List[Course], courses: List[Course])
+@(user: UserCredentials, courses_enrolled: List[Course], courses: List[Course], courseForm: Form[Course])
 
 @students_base(user) {
 
@@ -18,239 +18,7 @@
             </div>
             <div class="modal-body">
                <!-- Form -->
-                <form action="/newcourse" method="POST">
-
-                    <fieldset>
-                        <legend>Account informations</legend>
-
-                        <div class="clearfix  " id="courseName_field">
-                        <label for="courseName">Course name</label>
-                        <div class="input">
-
-                        <input type="text" id="courseName" name="courseName" value="">
-
-                        <span class="help-inline"></span>
-                        <span class="help-block">Please enter the course name</span> 
-                        </div>
-                        </div>
-
-                        <div class="clearfix  " id="notes_field">
-                        <label for="notes">Notes</label>
-                        <div class="input">
-
-                        <input type="text" id="notes" name="notes" value="">
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-                        <div class="clearfix  " id="institution_field">
-                        <label for="institution">Institution</label>
-                        <div class="input">
-
-                        <input type="text" id="institution" name="institution" value="">
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-                        <div class="clearfix  " id="place_field">
-                        <label for="place">Place</label>
-                        <div class="input">
-
-                        <input type="text" id="place" name="place" value="">
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-                        <div class="clearfix  " id="plannedCoursePeriod_field">
-                        <label for="plannedCoursePeriod">Planned course period</label>
-                        <div class="input">
-
-                        <input type="text" id="plannedCoursePeriod" name="plannedCoursePeriod" value="">
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-                        <div class="clearfix  " id="url_field">
-                        <label for="url">Url</label>
-                        <div class="input">
-
-                        <input type="text" id="url" name="url" value="">
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-                        <div class="clearfix  " id="credits_field">
-                        <label for="credits">Credits</label>
-                        <div class="input">
-
-                        <input type="text" id="credits" name="credits" value="" class="mini">
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-
-
-                        <div class="clearfix  " id="accademicYear_field">
-                        <label for="accademicYear">Accademic year</label>
-                        <div class="input">
-
-                        <input type="text" id="accademicYear" name="accademicYear" value="" class="mini">
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-
-                        <div class="clearfix  " id="budgetedCost_field">
-                        <label for="budgetedCost">Budgeted cost</label>
-                        <div class="input">
-
-                        <input type="text" id="budgetedCost" name="budgetedCost" value="" class="mini">
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-
-                        <div class="clearfix  " id="actualCost_field">
-                        <label for="actualCost">Actual cost</label>
-                        <div class="input">
-
-                        <input type="text" id="actualCost" name="actualCost" value="" class="mini">
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-
-                        <div class="clearfix  " id="professor_supervisorID_field">
-                        <label for="professor_supervisorID">Professors</label>
-                        <div class="input">
-
-                        <select id="professor_supervisorID" name="professor.supervisorID">
-
-                        <option class="blank" value="">--- Choose the professor ---</option>
-
-
-                        <option value="1">Doe</option>
-
-                        </select>
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-
-
-                        <div class="clearfix  " id="isInManifesto_field">
-                        <label for="isInManifesto">Is in manifesto</label>
-                        <div class="input">
-
-                        <input type="checkbox" id="isInManifesto" name="isInManifesto" value="true">
-                        <span></span>
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-
-
-                        <div class="clearfix  " id="isByUNITN_field">
-                        <label for="isByUNITN">Is a UNITN course</label>
-                        <div class="input">
-
-                        <input type="checkbox" id="isByUNITN" name="isByUNITN" value="true">
-                        <span></span>
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-
-
-
-                        <div class="clearfix  " id="isPaid_field">
-                        <label for="isPaid">Is paid</label>
-                        <div class="input">
-
-                        <input type="checkbox" id="isPaid" name="isPaid" value="true">
-                        <span></span>
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-                        <div class="clearfix  " id="areAllMarksDefined_field">
-                        <label for="areAllMarksDefined">All marks defined</label>
-                        <div class="input">
-
-                        <input type="checkbox" id="areAllMarksDefined" name="areAllMarksDefined" value="true">
-                        <span></span>
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-                        <div class="clearfix  " id="isPaymentCompleted_field">
-                        <label for="isPaymentCompleted">Payment completed</label>
-                        <div class="input">
-
-                        <input type="checkbox" id="isPaymentCompleted" name="isPaymentCompleted" value="true">
-                        <span></span>
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-
-
-                        <div class="clearfix  " id="deleted_field">
-                        <label for="deleted">Is deleted</label>
-                        <div class="input">
-
-                        <input type="checkbox" id="deleted" name="deleted" value="true">
-                        <span></span>
-
-                        <span class="help-inline"></span>
-                        <span class="help-block"></span> 
-                        </div>
-                        </div>
-                        
-                    </fieldset>
-                    
-                    <div class="actions">
-                        <a href="/" class="btn">Cancel</a>
-                        <input type="submit" class="btn primary" value="Submit">
-                    </div>
-                    
-                    <!--
-                    <div class="modal-footer">
-                        <a href="#" class="btn" onclick="closeDialog ();">Cancella</a>
-                        <a href="#" class="btn btn-primary" onclick="okClicked ();">Login</a>
-                    </div>
-                    -->
-                    
-                </form>
+                @courseform(courseForm)
                 
             </div>
             
