Modificato info corso

--- a/courses/app/views/courseDetailsModal.scala.html
+++ b/courses/app/views/courseDetailsModal.scala.html
@@ -7,7 +7,7 @@
             <a href="#" class="close" data-dismiss="modal">
                 <img src="@routes.Assets.at("images/logounitn.jpg")"  height = "90" width = "90" />
             </a>
-            <h3>Dettagli corso</h3>
+            <h3> @{course.courseName}</h3>
         </div>
         <div class="modal-body">
             
