fixed incorrect merge

--- a/courses/app/views/students_careers.scala.html
+++ b/courses/app/views/students_careers.scala.html
@@ -9,8 +9,7 @@
 } {
 
 <!-- Dialog dei Dettagli Corso -->
-
-@courseDetailsModal(courses_enrolled)
+@courseDetailsModal(CourseEnrollment.enrollmentsToCourses(enrollments))
 
 <!-- Fine dialog dei Dettagli Corso -->
 
