--- a/courses/app/views/students_studyplans.scala.html
+++ b/courses/app/views/students_studyplans.scala.html
@@ -18,7 +18,7 @@
 <!-- Dialog dei Dettagli Corso -->
 
 @courseDetailsModal(courses)
-@courseDetailsModal(courses_enrolled)
+@courseDetailsModal(studyplan)
         
 <!-- Fine dialog dei Dettagli Corso -->        
       
