--- a/courses/app/views/advisor_base.scala.html
+++ b/courses/app/views/advisor_base.scala.html
@@ -1,15 +1,18 @@
-@(user: UserCredentials)(sideContents: Html)(centralContents: Html)
+@(user: UserCredentials, students: Set[Student])(sideContents: Html)(centralContents: Html)
 
 @main { 
 
 <!---parte sx -->
 
-<ul class="nav nav-list">
-	<li class="nav-header"><font size="4" face="Courier">Studente 1</font></li> <!-- tag scala nome studente -->
+
+@for(student <- students) {
+  <ul class="nav nav-list">
+  	<li class="nav-header"><font size="4" face="Courier">@student.fullName</font></li> <!-- tag scala nome studente -->
 	<li><a data-toggle="modal" href="#windowTitleDialog" ><font size="3" face="Courier"></font>StudyPlan</a></li>
 	<li><a data-toggle="modal" href="#windowTitleDialog" ><font size="3" face="Courier"></font>Carriera</a></li>
 	@sideContents
-</ul>
+  </ul>
+}
 } {
  
 <!---parte centrale -->
