--- a/courses/app/views/advisor_studyplans.scala.html
+++ b/courses/app/views/advisor_studyplans.scala.html
@@ -1,6 +1,6 @@
-@(user: UserCredentials)
+@(user: UserCredentials, students: Set[Student])
 
-@advisor_base(user) {
+@advisor_base(user,students) {
 
 <!-- Parte side -->
 
