--- a/courses/app/views/advisor_careers.scala.html
+++ b/courses/app/views/advisor_careers.scala.html
@@ -10,7 +10,7 @@
 
 <div class="row-fluid">	  
     <div class="span6">
-        <h2 align="center"> Carriera di (Inserisci tag studente)</h2> <!-- inserire tag nome studente -->
+        <h2 align="center">[NAME]'s career</h2> <!-- inserire tag nome studente -->
         <table class="table table-bordered">
             <thead>
                 <tr>
