--- a/courses/app/views/advisor_studyplans.scala.html
+++ b/courses/app/views/advisor_studyplans.scala.html
@@ -6,21 +6,26 @@
 
 } {
 
+<!-- Modal dei corsi -->
+
+<!-- @@courseDetailsModal(courses) -->
+
+<!-- Fine modal dei corsi -->
+
 <!-- Parte dx-->
 <div class="span6">
     <h2 align="center"> StudyPlan</h2>
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th></th>
-                <th></th>
                 <th>Nome Corso</th>
+                <th>Professore</th>
             </tr>
-            <tr>
-                <th></th>
-                <th></th>
-                <th><a href="#">Nome Corsodfd</a></th><!--  si collega a pagina info corso -->
-            </tr>
+            
+                <tr>
+                    <td><a data-toggle="modal" href="#">nomecorso</a></td>
+                    <td></td>
+                </tr>
         </thead>
         <tbody>
 
