resize img ICT, login unificato in alto a dx

--- a/courses/app/views/main.scala.html
+++ b/courses/app/views/main.scala.html
@@ -53,8 +53,8 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span3">
-             <! -- barra laterale sx -->
-             <img src="@routes.Assets.at("images/IMG1.jpg")"  height = "300" width = "300" />
+             <!-- barra laterale sx -->             
+             <img src="@routes.Assets.at("images/IMG1.jpg")"  height = "100%" width = "100%" />
              <div class="well sidebar-nav">
              @barrasinistra
          	 </div> <!---well --> 
