--- a/courses/app/views/index.scala.html
+++ b/courses/app/views/index.scala.html
@@ -5,11 +5,8 @@
 
 
 <ul class="nav nav-list">
-              <li class="nav-header"><font size="4" face="Courier">LOGIN</font></li>
-              <li><a data-toggle="modal" name="logstudente" href="#windowTitleDialog" ><font size="3" face="Courier">Login Studente</font></a></li>
-              <li><a data-toggle="modal" name="logadvisor" href="#windowTitleDialog" ><font size="3" face="Courier">Login Advisor</font></a></li>
-              <li><a data-toggle="modal" name="logamministrazione" href="#windowTitleDialog" ><font size="3" face="Courier">Login Amministrazione</font></a></li>
-              <li class="nav-header"><font size="4" face="Courier">ALTRO</font></li>
+              
+              <li class="nav-header"><font size="4" face="Courier">Link utili</font></li>
               <li><a href="http://ict.unitn.it/announcements"><font size="3" face="Courier">News e Avvisi</font></a></li>
               <li><a href="http://ict.unitn.it/contacts"><font size="3" face="Courier">Contattaci</font></a></li>
             </ul>
