--- a/courses/app/views/advisor_careers.scala.html
+++ b/courses/app/views/advisor_careers.scala.html
@@ -1,4 +1,4 @@
-@(user: UserCredentials, students: Set[Student])
+@(user: UserCredentials, students: Set[Student], selectedStudent: Student)
 
 @advisor_base(user,students) {
 
@@ -6,21 +6,49 @@
 
 } {
 
+<!-- Modal dei corsi -->
+
+<!-- problema di visualizzazione: se tolgo questa riga va tutto bene.
+     probabilmente c'è da fixare qualche tag (div, presumibilmente)
+-->
+@courseDetailsModal(selectedStudent.getStudyPlan())
+
+<!-- Fine modal dei corsi -->
+
 <!-- Parte dx-->
 
 <div class="row-fluid">	  
     <div class="span6">
-        <h2 align="center">[NAME]'s career</h2> <!-- inserire tag nome studente -->
+        <h2 align="center">@selectedStudent.fullName's career</h2> <!-- inserire tag nome studente -->
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th>Corso</th>
-                    <th>Voto</th>
-                    <th>Data</th>
+                    <th>#</th>
+                    <th>Nome Corso</th>
+                    <th>Docente</th>
+                    <th>Esito</th>
+                    <th>Crediti</th>
                 </tr>
             </thead>
             <tbody>
-                
+                @for(enrollment <- selectedStudent.getCoursesEnrollmentSet()) {
+                    <tr>
+                        <td>@enrollment.getCourse.courseID</td>
+                        <td>@enrollment.getCourse.courseName</td>
+                        <td>@if(enrollment.getCourse.professor != null)  { @enrollment.getCourse.getProfessor.lastName }</td>
+                        @if(enrollment.credits == enrollment.credits) {
+                            <td>Passato</td>
+                        } else {
+                            <td>Non Passato</td>
+                        }
+                        <td>@enrollment.credits</td>
+                        <td>
+                            <a data-toggle="modal" href="#windowTitleDialog_coursedetails-@{enrollment.getCourse.courseID}">
+                                <img src="@routes.Assets.at("images/details.png")" />
+                            </a>
+                        </td>
+                    </tr>
+                }
             </tbody>
         </table>
         <br>
