--- a/courses/app/views/coursedetails.scala.html
+++ b/courses/app/views/coursedetails.scala.html
@@ -11,11 +11,9 @@
 
 
     <div class="span 8">
-        <p> @{course.professor}</p>    
+        <p> @{course.getProfessor.lastName}</p>    
     </div> 
 </div>
-
-
 
 <div class="row" >
     <div class="span 4">
@@ -114,5 +112,4 @@
         <p> @{course.notes}  </p> 
     </div> 
 </div>
-
 
