Aggiunto form accetta/rifiuta SP alla pagina dell'advisor

--- a/courses/app/views/advisor_base.scala.html
+++ b/courses/app/views/advisor_base.scala.html
@@ -1,4 +1,4 @@
-@(user: UserCredentials, students: Set[Student])(sideContents: Html)(centralContents: Html)
+@(user: UserCredentials, students: Set[Student])(sideContents: Html)(centralContents: Html)(script: Html)
 
 @main {
 
@@ -44,8 +44,6 @@ Loggato come: @user.userName - <a href="@routes.Authentication.logout()">Logout<
 
 } {
 
-<script language="JavaScript">
-    
-</script>
+@script
 
 }
