passato da set a liste per l'advisor

--- a/courses/app/views/advisor_base.scala.html
+++ b/courses/app/views/advisor_base.scala.html
@@ -1,4 +1,4 @@
-@(user: UserCredentials, students: Set[Student])(sideContents: Html)(centralContents: Html)(script: Html)
+@(user: UserCredentials, students: List[Student])(sideContents: Html)(centralContents: Html)(script: Html)
 
 @main {
 
