--- a/courses/app/views/advisor_studyplans.scala.html
+++ b/courses/app/views/advisor_studyplans.scala.html
@@ -1,4 +1,4 @@
-@(user: UserCredentials, students: Set[Student], selectedStudent: Student)
+@(user: UserCredentials, students: List[Student], selectedStudent: Student)
 
 @advisor_base(user,students) {
 
