--- a/courses/app/views/nonAuthIndex.scala.html
+++ b/courses/app/views/nonAuthIndex.scala.html
@@ -1,6 +1,14 @@
 @(form: Form[Authentication.Login])
 
-@index(form) { <a class="brand" data-toggle="modal" name="login" href="#windowTitleDialog" >Login</a> } {
+@index(form) {
+
+<a class="brand" data-toggle="modal" name="login" href="#windowTitleDialog" >Login</a>
+
+} {
+
+
+
+} {
 
 <script language="JavaScript">
 
