--- a/courses/app/views/advisor_base.scala.html
+++ b/courses/app/views/advisor_base.scala.html
@@ -7,8 +7,13 @@
     <ul class="nav nav-list">
         <li class="nav-header"><font size="4" face="Courier">Students</font></li>
         <!-- Mostrare SOLO se ci sono approvazioni in sospeso -->
-            <li>5 richieste di approvazione in sospeso</li>
-        <!------------------------------------------------------>
+        @if(user.getSupervisor().getApprovalRequests() > 0) {
+            @if(user.getSupervisor().getApprovalRequests() == 1) {
+                <li>@user.getSupervisor().getApprovalRequests() richiesta di approvazione in sospeso</li>
+            } else {
+                <li>@user.getSupervisor().getApprovalRequests() richieste di approvazione in sospeso</li>
+            }
+        }
         </br>
         @for(student <- students) {
           	<li><font size="4" face="Courier">@student.fullName</font></li>
