--- a/courses/app/views/main.scala.html
+++ b/courses/app/views/main.scala.html
@@ -91,18 +91,23 @@
     <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-collapse.js"></script>
     <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-carousel.js"></script>
     <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-typeahead.js"></script> -->
+    
     <script src="@routes.Assets.at("javascripts/jquery.js")"></script>
-    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-transition.js"></script>
-    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-alert.js"></script>
-    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-modal.js"></script>
-    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
-    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-scrollspy.js"></script>
-    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-tab.js"></script>
-    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-tooltip.js"></script>
-    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-popover.js"></script>
-    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-button.js"></script>
-    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-collapse.js"></script>
-    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-carousel.js"></script>
-    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap-typeahead.js"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-modal.js")"</script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-button.js")"></script>
+    
+<!--
+    <script src="@routes.Assets.at("javascripts/bootstrap-transition.js")"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-alert.js")"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-dropdown.js")"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-scrollspy.js")"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-tab.js")"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-tooltip.js")"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-popover.js")"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-collapse.js")"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-carousel.js")"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-typeahead.js")"></script>
+-->
+
    </body> 
   </html> 
