pagina credentials dell'admin

--- a/courses/app/views/admin_base.scala.html
+++ b/courses/app/views/admin_base.scala.html
@@ -5,10 +5,11 @@
 <!---parte sx -->
 
 <ul class="nav nav-list">
-              <li class="nav-header"><font size="4" face="Courier">Amministratore</font></li> <!-- tag scala nome studente -->
-              <li><a  href="@routes.Admins.courses()" ><font size="3" face="Courier"></font>Corsi</a></li>
-              <li><a  href="@routes.Admins.students()" ><font size="3" face="Courier"></font>Studenti</a></li>
-	      <li><a  href="@routes.Admins.supervisors()" ><font size="3" face="Courier"></font>Docenti</a></li>
+              <li class="nav-header"><font size="4" face="Courier">Administrator</font></li> <!-- tag scala nome studente -->
+              <li><a  href="@routes.Admins.courses()" ><font size="3" face="Courier"></font>Courses</a></li>
+              <li><a  href="@routes.Admins.students()" ><font size="3" face="Courier"></font>Students</a></li>
+	      <li><a  href="@routes.Admins.supervisors()" ><font size="3" face="Courier"></font>Supervisors</a></li>
+	      <li><a  href="@routes.Admins.credentials()" ><font size="3" face="Courier"></font>Credentials</a></li>
 	@sideContents
 </ul>
 } {
