--- a/courses/app/views/advisor_watchStudent.scala.html
+++ b/courses/app/views/advisor_watchStudent.scala.html
@@ -65,7 +65,7 @@
 <!-- Fine modal -->
 
 <!-- Parte dx-->
-<div class="row-fluid">
+<!--<div class="row-fluid">-->
     <div class="span6">
         <h2 align="center">@selectedStudent.fullName's Study Plan</h2>
        
@@ -98,24 +98,61 @@
             <button data-toggle="modal" href="#windowTitleDialog_acceptSP" class="btn btn-large">Accetta</button>
         </p>
     </div><!--span6/1 -->
-
-    <div class="span6">    
-	    <h2 align="center"> Voti</h2>
-    </div> <!--span 6/2-->
-</div>
+    
+<!--</div>-->
 
 } {
 
-<script language="JavaScript">
+<!-- Modal dei corsi -->
 
-    function autofun()
-    {
-        /*@@if(form.hasGlobalErrors) { 
-            $('#windowTitleDialog_rejectSP').modal('show')
-        }*/
-    }
+@courseDetailsModal(selectedStudent.getStudyPlan())
 
-</script>
+<!-- Fine modal dei corsi -->
+
+<!-- Parte dx-->
+
+<!--<div class="row-fluid">	  -->
+    <div class="span6">
+        <h2 align="center">@selectedStudent.fullName's career</h2> <!-- inserire tag nome studente -->
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Nome Corso</th>
+                    <th>Docente</th>
+                    <th>Esito</th>
+                    <th>Crediti</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @for(enrollment <- selectedStudent.getCoursesEnrollmentSet()) {
+                    <tr>
+                        <td>@enrollment.getCourse.courseID</td>
+                        <td>@enrollment.getCourse.courseName</td>
+                        <td>@if(enrollment.getCourse.professor != null)  { @enrollment.getCourse.getProfessor.lastName }</td>
+                        @if(enrollment.credits == enrollment.credits) {
+                            <td>Passato</td>
+                        } else {
+                            <td>Non Passato</td>
+                        }
+                        <td>@enrollment.credits</td>
+                        <td>
+                            <a data-toggle="modal" href="#windowTitleDialog_coursedetails-@{enrollment.getCourse.courseID}">
+                                <img src="@routes.Assets.at("images/details.png")" />
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <br>
+        <br>
+    </div><!--span1 -->
+<!--</div>-->
+
+} {
+
+
 
 }
-
