--- a/courses/app/views/admin_students.scala.html
+++ b/courses/app/views/admin_students.scala.html
@@ -1,31 +1,33 @@
-@(user: UserCredentials)
+@(user: UserCredentials, students: List[Student])
 
 @admin_base(user) {
 
 
 } {
+<div class="span6">
+  <h2>Students</h2>
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+      </tr>
+    </thead>
+    <tbody>
+        @for(student <- students) {
+          <tr>
+            <td>@student.firstName</td>
+            <td>@student.lastName</td>
+          </tr>
+        }
+    </tbody>
+  </table>
+  <br>
+  <br>
+</div><!--span1 -->
 
-    <div class="span6">
-			      <h2>ListaCorsi</h2>
-			      <table class="table table-bordered">
-			<thead>
-			  <tr>
-			    <th>Nome Studenti</th>
-			    <th>Crediti</th>
-			  </tr>
-			</thead>
-			<tbody>
-			  
-			</tbody>
-		      </table>
-		    <br>
-		    <br>
-   </div><!--span1 -->
-		  
-		  <!--- LA RIMOZIONE DEI CORSI VERRA GESTITA NEL MODAL DETTAGLI -->
-   <div class="span6">
-		       <h2>Filtro</h2>
-   </div>
-
-
+<!--- LA RIMOZIONE DEI CORSI VERRA GESTITA NEL MODAL DETTAGLI -->
+<div class="span6">
+  <h2>Filtro</h2>
+</div>
 }
