--- a/courses/app/views/students_studyplans.scala.html
+++ b/courses/app/views/students_studyplans.scala.html
@@ -26,13 +26,19 @@
 
 <div class="row-fluid">
   <div class="span6">
-    <h2>StudyPlan</h2>
-    <!-- if --->
-    <h3>(In costruzione)</h3>
-    <!-- else if --->
-    <h3>(In attesa d'approvazione)</h3>
-    <!-- else --->
-    <h3>(Approvato)</h3>
+    <h2>StudyPlan
+      @if(user.getStudent().isPlanApproved == 0 || user.getStudent().isPlanApproved == null) {
+        (In costruzione)
+      } else {
+        @if(user.getStudent().isPlanApproved == 1) {
+          (In attesa d'approvazione)
+        } else {
+          @if(user.getStudent().isPlanApproved == 2) {
+            (Approvato)
+          }
+        }
+      }
+    </h2>
     <!-- se è in richiesta d'approvazione o è accettato, tolgo le colonne per le modifiche -->
     <table class="table table-bordered">
       <thead>
