generalizzazione SP studente

--- a/courses/app/views/students_studyplans.scala.html
+++ b/courses/app/views/students_studyplans.scala.html
@@ -8,7 +8,7 @@
 
 } {
 
-<!-- Dialog del Nuovo Corso -->
+<!-- @@common_editableSP(studyplan, courses, courseForm) -->
 
 @externCourseFormModal(courseForm, "/student/studyplan")
 
@@ -103,6 +103,7 @@
     </table>
   </div><!--span-->
 </div><!--row-->
-<!-- fine parte centrale -->
+
+
 }
 
