differenziati student per studyplan e stato, differenziati corsi per anno

--- a/courses/app/views/admin_oldcourses.scala.html
+++ b/courses/app/views/admin_oldcourses.scala.html
@@ -6,14 +6,14 @@
 } {
 
 <div class="span6">
-  <h2>Courses</h2>
+  <h2>Old Courses</h2>
   <table class="table table-bordered">
     <thead>
       <tr>
 	<th>Course Name</th>
 	<th>Professor</th>
 	<th>Year</th>
-        <th>Start Date</th>
+	<th>Start Date</th>
       </tr>
     </thead>
     <tbody>
@@ -30,14 +30,5 @@
     </tbody>
   </table>
   <p align="right">
-    <a data-toggle="modal" href="#windowTitleDialog_newcourse" class="btn btn-primary btn-large">Aggiungi Nuovo Corso</a>
-    <br>
-    <br>
 </div><!--span1 -->
-
-<div class="span6">
-  <h2>Filtro</h2>
-</div>
-
-
 }
