--- a/courses/app/views/admin_suspended_students.scala.html
+++ b/courses/app/views/admin_suspended_students.scala.html
@@ -5,13 +5,12 @@
 
 } {
 <div class="span6">
-  <h2>Students</h2>
+  <h2>Suspended Students</h2>
   <table class="table table-bordered">
     <thead>
       <tr>
         <th>First Name</th>
         <th>Last Name</th>
-        <th>Study Plan</th>
       </tr>
     </thead>
     <tbody>
@@ -19,7 +18,6 @@
           <tr>
             <td>@student.firstName</td>
             <td>@student.lastName</td>
-            <td>@student.printIsPlanApproved</td>
           </tr>
         }
     </tbody>
@@ -27,9 +25,4 @@
   <br>
   <br>
 </div><!--span1 -->
-
-<!--- LA RIMOZIONE DEI CORSI VERRA GESTITA NEL MODAL DETTAGLI -->
-<div class="span6">
-  <h2>Filtro</h2>
-</div>
 }
